--- a/Werewolf for Telegram/Languages/EnglishAmnesia.xml
+++ b/Werewolf for Telegram/Languages/EnglishAmnesia.xml
@@ -886,7 +886,7 @@ Last update: 30/12/2016 by @ayylimao -->
     <value>You aren't a global admin...</value>
   </string>
   <string key="NotPara">
-    <value>You aren't Para! How can you forget something like that!</value>
+    <value>You aren't @rainzy! How can you forget something like that!</value>
   </string>
   <string key="Yes">
     <value>Yes</value>
