--- a/Werewolf for Telegram/Languages/FilipinoAmnesia.xml
+++ b/Werewolf for Telegram/Languages/FilipinoAmnesia.xml
@@ -896,7 +896,7 @@
     <value>You aren't a global admin...</value>
   </string>
   <string key="NotPara">
-    <value>You aren't Para! How can you forget something like that!</value>
+    <value>You aren't @rainzy! How can you forget something like that!</value>
   </string>
   <string key="Yes">
     <value>Yes</value>
